--- a/src/main/web/app/index.html
+++ b/src/main/web/app/index.html
@@ -61,6 +61,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-websocket/angular-websocket.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
